Project3/testcases/moretest23.glsl
int x;
bool setBool(bool setter)
{
	return setter;
}
return false;
